--- a/todo-app/todo-frontend/Dockerfile
+++ b/todo-app/todo-frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:16
+FROM node:16 AS build-stage
 
 WORKDIR /usr/src/app
 
@@ -6,10 +6,15 @@ COPY . .
 
 RUN npm ci
 
+RUN CI=true npm test
+
 RUN npm run build
 
-RUN npm install -g serve
+ENV REACT_APP_BACKEND_URL=http://localhost:3000
 
-ENV REACT_APP_BACKEND_URL="http://localhost:3000"
+EXPOSE 3000
 
-CMD ["serve", "build"]
+FROM nginx:1.20-alpine
+
+COPY --from=build-stage /usr/src/app/build /usr/share/nginx/html
+
