--- a/todo-app/todo-backend/docker-compose.dev.yml
+++ b/todo-app/todo-backend/docker-compose.dev.yml
@@ -12,10 +12,32 @@ services:
     volumes:
       - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
       - ./mongo_data:/data/db
+    container_name: mongo_container
   redis:
     image: redis
     ports:
-     - 6379:6379
+     - 3232:6379
     command: redis-server --appendonly yes
     volumes:
       - ./redis_data:/data
+    container_name: redis_container
+  server:
+    image: hello-back-dev
+    build:
+      context: .
+      dockerfile: dev.Dockerfile
+    ports:
+      - 3210:3000
+    container_name: hello-back-dev
+    environment:
+      - MONGO_URL=mongodb://the_username:the_password@mongo:27017/the_database
+      - REDIS_URL=redis://redis:6379
+    volumes:
+      - ./:/usr/src/app
+    depends_on:
+      - mongo
+      - redis
+  debug-helper:
+    image: busybox
+    container_name: debug-helper
+    
