--- a/todo-app/docker-compose.dev.yml
+++ b/todo-app/docker-compose.dev.yml
@@ -11,7 +11,46 @@ services:
       - "3000:3000"
     container_name: hello-front-dev2
     environment:
-      - REACT_APP_BACKEND_URL=http://localhost:3000
+      - REACT_APP_BACKEND_URL=/api/
+  mongo:
+    image: mongo
+    ports:
+     - 3456:27017
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_DATABASE: the_database
+    volumes:
+      - ./todo-backend/mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
+      - ./todo-backend/mongo_data:/data/db
+    container_name: mongo_container2
+  redis:
+    image: redis
+    ports:
+     - 3232:6379
+    command: redis-server --appendonly yes
+    volumes:
+      - ./todo-backend/redis_data:/data
+    container_name: redis_container2
+  server:
+    image: hello-back-dev
+    build:
+      context: ./todo-backend
+      dockerfile: dev.Dockerfile
+    ports:
+      - 3210:3000
+    container_name: hello-back-dev2
+    environment:
+      - MONGO_URL=mongodb://the_username:the_password@mongo:27017/the_database
+      - REDIS_URL=redis://redis:6379
+    volumes:
+      - ./todo-backend/:/usr/src/app
+    depends_on:
+      - mongo
+      - redis
+  debug-helper:
+    image: busybox
+    container_name: debug-helper2
   nginx:
     image: nginx:1.20.1
     volumes:
@@ -21,3 +60,4 @@ services:
     container_name: reverse-proxy
     depends_on:
       - app
+      - server
